# spotify-lib

./: .env.example  .env.wrong_callback  .gitignore  Cargo.toml  Makefile  README.md
spotify-consume/: Cargo.toml
spotify-consume/src/: main.rs
spotify-consume/static/: index.html
spotify-consume/static/cookie/: app.html
spotify-consume/static/jwt/: app.html  callback.html
src/: constants.rs  errors.rs  lib.rs
src/modules/: mod.rs
src/modules/oauth/: client.rs  config.rs  domain.rs  mod.rs
src/modules/oauth/utils/: callback.rs
src/modules/user/: client.rs  domain.rs
